--- a/zsh/.gitconfig
+++ b/zsh/.gitconfig
@@ -1,7 +1,6 @@
-[user]
-	name = qpanda
-	email = 7557807+qpanda@users.noreply.github.com
 [diff]
 	tool = vimdiff
 [merge]
 	tool = vimdiff
+[mergetool]
+	keepBackup = false
