Additional aliases and better rebase default settings

--- a/zsh/.gitconfig
+++ b/zsh/.gitconfig
@@ -9,6 +9,31 @@
 	br = branch
 	ci = commit
 	st = status
+	sa = stash
 	rb = rebase
 	di = diff
+	fe = fetch
 	lo = log
+	pl = pull
+	pu = push
+	ad = add
+	mt = mergetool
+	dt = difftool
+	plrb = "pull --rebase"
+	rbin = "rebase --interactive"
+	rbco = "rebase --continue"
+	rbsk = "rebase --skip"
+	rbab = "rebase --abort"
+	pufl = "push --force-with-lease"
+	pufo = "push --force"
+	puus = "push --set-upstream"
+	cial = "commit --all"
+	feal = "fetch --all"
+	fepr = "fetch --prune"
+	adal = "add --all"
+	cobr = "checkout --b"
+	coth = "checkout --theirs"
+	coou = "checkout --ours"
+[rebase]
+	autoSquash = true
+	missingCommitsCheck = true
