Fixing issue with task/debug commands not executing correctly

--- a/_windows_/rc/AppData/Roaming/Code/User/settings.json
+++ b/_windows_/rc/AppData/Roaming/Code/User/settings.json
@@ -16,6 +16,7 @@
         "GOROOT":"${env:USERPROFILE}\\Tools\\go",
         "PATH":"${env:PATH};${env:USERPROFILE}\\Tools\\Git\\bin;${env:USERPROFILE}\\Tools\\go\\bin;${env:USERPROFILE}\\.cargo\\bin",
     },
+    "terminal.integrated.automationShell.windows": "cmd.exe",
 
     "git.autofetch": true,
     "git.path": "${manual:USERPROFILE}\\Tools\\Git\\bin\\git.exe",
