Trying to get DirColors working with Visual Studio Code

--- a/_windows_/rc/AppData/Roaming/Code/User/settings.json
+++ b/_windows_/rc/AppData/Roaming/Code/User/settings.json
@@ -9,7 +9,7 @@
         "PowerShell": {
             "source": "PowerShell",
             "icon": "terminal-powershell",
-            "args": ["-NoLogo", "-NoExit", "-Command", "Import-Module posh-git"]
+            "args": ["-NoLogo", "-NoExit", "-Command", "Import-Module posh-git, DirColors"]
         },
     },
     "terminal.integrated.env.windows": {
