--- a/_windows_/rc/AppData/Roaming/Code/User/settings.json
+++ b/_windows_/rc/AppData/Roaming/Code/User/settings.json
@@ -2,25 +2,30 @@
     "workbench.colorTheme": "Default Light+",
     "editor.renderControlCharacters": true,
     "editor.renderWhitespace": "all",
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true,
     "diffEditor.ignoreTrimWhitespace": false,
-
     "terminal.integrated.defaultProfile.windows": "PowerShell",
     "terminal.integrated.profiles.windows": {
         "PowerShell": {
             "source": "PowerShell",
             "icon": "terminal-powershell",
-            "args": ["-NoLogo", "-NoExit", "-Command", "Import-Module posh-git, DirColors"]
+            "args": [
+                "-NoLogo",
+                "-NoExit",
+                "-Command",
+                "Import-Module posh-git, DirColors"
+            ]
         },
     },
     "terminal.integrated.env.windows": {
-        "GOROOT":"${env:USERPROFILE}\\Tools\\go",
-        "PATH":"${env:PATH};${env:USERPROFILE}\\Tools\\Git\\bin;${env:USERPROFILE}\\Tools\\go\\bin;${env:USERPROFILE}\\.cargo\\bin",
+        "GOROOT": "${env:USERPROFILE}\\Tools\\go",
+        "PATH": "${env:PATH};${env:USERPROFILE}\\Tools\\Git\\bin;${env:USERPROFILE}\\Tools\\go\\bin;${env:USERPROFILE}\\.cargo\\bin",
     },
     "terminal.integrated.automationShell.windows": "cmd.exe",
-
     "git.autofetch": true,
     "git.path": "${manual:USERPROFILE}\\Tools\\Git\\bin\\git.exe",
-
     "go.goroot": "${manual:USERPROFILE}\\Tools\\go",
     "go.formatTool": "goimports",
     "go.useLanguageServer": true,
@@ -28,7 +33,6 @@
         "references": false,
         "runtest": true
     },
-
     "rust-client.channel": "stable",
     "rust-client.rustupPath": "${manual:USERPROFILE}\\.cargo\\bin\\rustup",
 }
